--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,8 @@
   "plugins": ["prettier", "react-native" ],
   "env": {
     "react-native/react-native": true
+  },
+  "rules": {
+    "react/prop-types": 0
   }
 }
