--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "10.0.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-vector-icons": "6.4.2",
     "react-redux": "6.0.1",
     "redux": "4.0.1"
   },
